Dodano footer, sformatowanie kodu

--- a/index.html
+++ b/index.html
@@ -1,117 +1,109 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;500;700&display=swap" rel="stylesheet">
-    <script src="https://kit.fontawesome.com/49cd939c76.js" crossorigin="anonymous"></script>
-</head>
-
-<title>Proekt</title>
-
-<body onload="Losuj()">
-    <article class="articlelist">
-        <header>
-
-            <h1 class="title"><i class="fa-solid fa-plate-wheat"></i> Losuj Obiadek</h>
-        </header>
-        <section class="topButtons">
-
-
-
-
+   <head>
+      <meta charset="UTF-8">
+      <meta http-equiv="X-UA-Compatible" content="IE=edge">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <link rel="stylesheet" href="style.css">
+      <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;500;700&display=swap" >
+      <script src="https://kit.fontawesome.com/49cd939c76.js" crossorigin="anonymous"></script>
+      <title>Projekt zaliczeniowy</title>
+   </head>
+   <body onload="Losuj()">
+      <article class="articlelist">
+         <header>
+            <h1 class="title"><i class="fa-solid fa-plate-wheat"></i> Losuj Obiadek</h1>
+         </header>
+         <section class="topButtons">
             <div class="losuj">
-                <button class="styleButton" id="random_button"> Losuj
-                    <i class="fa-solid fa-plate-wheat"></i></button>
-
+               <button class="styleButton" id="random_button"> Losuj
+               <i class="fa-solid fa-plate-wheat"></i></button>
             </div>
-        </section>
-        <main>
-
+         </section>
+         <main>
             <article class="randomFood">
-                <section class="foodSuggest">
-                    <div class="imgFood"> <img src="obrazki/1.jpg" alt="Wylosowany obiadek" class="img_random"
-                            id="Img1">
-                        <div class="titleRecipe1">
-                            <p><span class="new_title">lorem</span></p>
-                        </div>
-                    </div>
-
-                    <article class="buttons1">
-                        <div class="detailsButton">
-                            <button>
-                                <a href="" class="Source" target="_self">
-                                    <i class="fa-solid fa-bars"></i>
-                                </a>
-                            </button>
-                        </div>
-                        <div class="youtubeButton">
-                            <button>
-                                <a href="" class="Youtube_link" target="_self">
-                                    <i class="fa-brands fa-youtube"></i>
-                                </a>
-                            </button>
-                        </div>
-
-                    </article>
-                </section>
-                <section class="foodSuggest">
-                    <div class="imgFood"> <img src="obrazki/2.jpg" alt="Wylosowany obiadek" class="img_random">
-                        <div class="titleRecipe2">
-                            <p><span class="new_title">lorem</span></p>
-                        </div>
-                    </div>
-                    <article class="buttons2">
-                        <div class="detailsButton">
-                            <button>
-                                <a href="" class="Source" target="_self">
-                                    <i class="fa-solid fa-bars"></i>
-                                </a>
-                            </button>
-                        </div>
-                        <div class="youtubeButton">
-                            <button>
-                                <i class="fa-brands fa-youtube"></i></button>
-                        </div>
-
-                    </article>
-                </section>
-                <section class="foodSuggest">
-                    <div class="imgFood">
-                        <img src="obrazki/3.jpg" alt="Wylosowany" class='img_random'>
-                        <div class="titleRecipe3">
-                            <p><span class="new_title">lorem</span></p>
-                        </div>
-                    </div>
-                    <article class="buttons3">
-                        <div class="detailsButton">
-                            <button>
-                                <a href="" class="Source" target="_self">
-                                    <i class="fa-solid fa-bars"></i>
-                                </a>
-                            </button>
-                        </div>
-                        <div class="youtubeButton">
-                            <button>
-                                <i class="fa-brands fa-youtube"></i></button>
-                        </div>
-
-                    </article>
-                </section>
-
+               <section class="foodSuggest">
+                  <div class="imgFood">
+                     <img src="" alt="Wylosowany obiadek" class="img_random" id="Img1">
+                     <div class="titleRecipe1">
+                        <p><span class="new_title">lorem</span></p>
+                     </div>
+                  </div>
+                  <article class="buttons1">
+                     <div class="detailsButton">
+                        <button>
+                        <a href="" class="Source" target="_blank">
+                        <i class="fa-solid fa-bars"></i>
+                        </a>
+                        </button>
+                     </div>
+                     <div class="youtubeButton">
+                        <button>
+                        <a href="" class="Youtube_link" target="_blank">
+                        <i class="fa-brands fa-youtube"></i>
+                        </a>
+                        </button>
+                     </div>
+                  </article>
+               </section>
+               <section class="foodSuggest">
+                  <div class="imgFood">
+                     <img src="" alt="Wylosowany obiadek" class="img_random">
+                     <div class="titleRecipe2">
+                        <p><span class="new_title">lorem</span></p>
+                     </div>
+                  </div>
+                  <article class="buttons2">
+                     <div class="detailsButton">
+                        <button>
+                        <a href="" class="Source" target="_blank">
+                        <i class="fa-solid fa-bars"></i>
+                        </a>
+                        </button>
+                     </div>
+                     <div class="youtubeButton">
+                        <button>
+                        <a href="" class="Youtube_link" target="_blank">
+                        <i class="fa-brands fa-youtube"></i>
+                        </a>
+                        </button>
+                     </div>
+                  </article>
+               </section>
+               <section class="foodSuggest">
+                  <div class="imgFood">
+                     <img src="" alt="Wylosowany" class='img_random'>
+                     <div class="titleRecipe3">
+                        <p><span class="new_title">lorem</span></p>
+                     </div>
+                  </div>
+                  <article class="buttons3">
+                     <div class="detailsButton">
+                        <button>
+                        <a href="" class="Source" target="_blank">
+                        <i class="fa-solid fa-bars"></i>
+                        </a>
+                        </button>
+                     </div>
+                     <div class="youtubeButton">
+                        <button>
+                        <a href="" class="Youtube_link" target="_blank">
+                        <i class="fa-brands fa-youtube"></i>
+                        </a>
+                        </button>
+                     </div>
+                  </article>
+               </section>
             </article>
-
-
-        </main>
-        <footer>
-
-            <p>Mój proekt!</p>
-        </footer>
-    </article>
-    <script src="main.js"></script>
-</body>
-
+         </main>
+         <footer>
+            <div class="footer">
+               <a href="https://cdv.pl/studia-podyplomowe/" target="_blank"><img src="obrazki/cdv.png" alt="" class="cdv"> </a>
+               <p class="texrFooter">Studia podyplomowe </p>
+            </div>
+         </footer>
+      </article>
+      <script src="main.js"></script>
+   </body>
 </html>
+
