--- a/index.html
+++ b/index.html
@@ -2,29 +2,16 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Lyrics finder</title>
     <link rel="stylesheet" href="style.css" />
+    <title>Joke generator</title>
   </head>
   <body>
-    <header>
-
-      <h1>Let's sing!</h1>
-
-      <form id="form">
-        <input type="text" id="search" placeholder="Enter song name or artist..">
-        <button>Search for lyrics</button>
-      </form>
-
-    </header>
-
-    <div id="result" class="container">
-      <p>Check the results...</p>
+    <div class="container">
+      <h1>Cheer up!:)</h1>
+      <div id="joke" class="joke">// Enjoy the jokes!</div>
+      <button id="jokeButton" class="btn">Get more jokes</button>
     </div>
-
-
-      <script src="main.js"></script>
-    </header>
+    <script src="script.js"></script>
   </body>
 </html>
