--- a/index.html
+++ b/index.html
@@ -2,16 +2,38 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Lyrics searcher</title>
     <link rel="stylesheet" href="style.css" />
-    <title>Joke generator</title>
   </head>
   <body>
-    <div class="container">
-      <h1>Cheer up!:)</h1>
-      <div id="joke" class="joke">// Enjoy the jokes!</div>
-      <button id="jokeButton" class="btn">Get more jokes</button>
+    <header>
+  
+      </div>
+      <h1>Chill out and sing!</h1>
+
+      <form id="form">
+        <input
+          type="text"
+          id="search"
+          placeholder="Enter an artist or song..."
+        />
+
+        <button class="btn">Search for lyrics</button>
+      </form>
+      
+         <!-- loader which 
+             loads till response comes -->
+             <div class="d-flex justify-content-center">
+              <div class="spinner-border" role="status" id="loading">
+                <span class="sr-only">Loading...</span>
+              </div>
+    </header>
+    <div id="result" class="container">
+      <p>Check for results...</p>
     </div>
-    <script src="script.js"></script>
+
+    <script src="main.js"></script>
   </body>
 </html>
