--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
       href="https://fonts.googleapis.com/css2?family=Inter:wght@900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="/styles/style.css" />
-    <link rel="stylesheet" href="/styles/loader.css" />
+    <link rel="stylesheet" href="styles/style.css" />
+    <link rel="stylesheet" href="styles/loader.css" />
     <title>movie app</title>
   </head>
 
@@ -66,9 +66,9 @@
       <button class="next-btn" id="next-bt"><span>&#8594;</span></button>
     </div>
 
-    <script type="module" src="/scripts/main.js"></script>
-    <script type="module" src="/scripts/pagination.js"></script>
+    <script type="module" src="scripts/main.js"></script>
+    <script type="module" src="scripts/pagination.js"></script>
     <!-- <script type="module" src="/pagination-suggestions.js"></script> -->
-    <script type="module" src="/scripts/scrolling.js"></script>
+    <script type="module" src="scripts/scrolling.js"></script>
   </body>
 </html>
