--- a/index.html
+++ b/index.html
@@ -4,36 +4,15 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Lyrics searcher</title>
+    <title>Weather forecast</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <header>
   
       </div>
-      <h1>Chill out and sing!</h1>
-
-      <form id="form">
-        <input
-          type="text"
-          id="search"
-          placeholder="Enter an artist or song..."
-        />
-
-        <button class="btn">Search for lyrics</button>
-      </form>
-      
-         <!-- loader which 
-             loads till response comes -->
-             <div class="d-flex justify-content-center">
-              <div class="spinner-border" role="status" id="loading">
-                <span class="sr-only">Loading...</span>
-              </div>
+      <h1>What's the weather like in...</h1>
     </header>
-    <div id="result" class="container">
-      <p>Check for results...</p>
-    </div>
-
     <script src="main.js"></script>
   </body>
 </html>
