pole wyszukiwania i test czy api działa

--- a/index.html
+++ b/index.html
@@ -9,10 +9,17 @@
   </head>
   <body>
     <header>
-  
-      </div>
       <h1>What's the weather like in...</h1>
     </header>
+    <section>
+      <form>
+        <input type="text" placeholder="Get Weather" />
+      </form>
+
+      <div class="wrapper">
+        <div class="details">
+      </div>
+    </section>
     <script src="main.js"></script>
   </body>
 </html>
