--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       </form>
 
       <div class="wrapper">
-        <div class="details">
+        <div class="details"></div>
       </div>
     </section>
     <script src="main.js"></script>
