--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
               <input type="text" name="name" required> 
               <label for="password">Password</label>
               <input type="password" name="password" required>
-              <button type="button" class="button">Login</button>
+              <button type="button" class="button" id="login_login">Login</button>
               <button type="button" class="button cancel" id="login_cancel">Close</button>
             </form>
           </div>
